242
- Update airbase to 151
- Update Jetty to 12.0.7 and EE10
- Add support for using virtual threads in the server
- Update byte-buddy to 1.14.12
- Update jjwt to 0.12.5
- Update logback to 1.5.1

240

- Update airbase to 148
- Update jjwt to 0.12.3
- Update jetty to 11.0.19
- Update byte-buddy to 1.14.10
- Update jersey to 3.1.3
- Update jaxb to 4.0.4
- Update airlift units to 1.10
- Upgrade logback to 1.4.14
- Update jackson to 2.16.1
- Update jersey to 3.1.5

239

- Deprecate attribute utility methods in Tracing
- Allow binding additional span processors
- Update jjwt to 0.12.2

238

- Update Jetty to 11.0.17
- Add node annotations to openmetrics labels
- Remove non-strict config from Bootstrap
- Allow Bootstrap configuration before creating injector
- Add property methods to AbstractConfigurationAwareModule

237

- Update to OpenTelemetry 1.30.1

236

- Do not localize Jakarta validation messages
- Remove escaping of HTML characters in JSON responses
- Add config for SO_KEEPALIVE for HTTP client

235

- Use annotation file for both traces and logs

234

- Move to Jakarta validation API
- Fail response if HttpStatusListener throws an exception

233

- Move to Jakarta dependencies

232

- HTTP client status listener

231

- Restore pre 2.15 Jackson string deserialization length limit

230

- Remove broken uncaught exception handler from Bootstrap
- Switch logging BufferedHandler to full non-blocking implementation
- Expose cache load count in JMX cache stats

229

- Strip trailing whitespace when redirecting standard output streams to log
- Add OpenTelemetry tracing module
- Add OpenTelemetry tracing to HTTP client
- Add OpenTelemetry tracing for JAX-RS
- Add OpenTelemetry trace context to JSON logging
- Add openmetrics and security-jwks to BOM
- Add getProperty method to AbstractConfigurationAwareModule
- Fix HTTP client request size statistic

228

- Exclude Hamcrest from jaxrs-testing

227

- Exclude jakarta.ws.rs-api from jaxrs

226
